# Cronjob-Service

./: .gitignore  Dockerfile  LICENSE  README.md  abstract.py  compose.yaml  cron.py  cron_base.py  cronjob.py  crontab.txt  pyproject.toml  requirements.txt  settings.json  test.http
config/: model_ids.csv  settings.json
cron/: job_scheduler.py  settings.py
cron-runner/: Dockerfile  pyproject.toml  requirements.txt  settings.json
cron-runner/config/: hourly_fields.csv  model_ids.csv
cron-runner/cron/: job_scheduler.py  settings.py  settings_utils.py
cron-runner/cron/jobs/: cronjob_base.py  open_meteo.py  open_meteo_csv_cronjob.py  open_meteo_influx.py  open_meteo_influx_cronjob.py  toDataFrame.py
cron-runner/cron/jobs/model_benchmarking/: benchmarking.py  benchmarking_cronjob.py
cron-runner/cron/jobs/open_meteo/: open_meteo_cronjob.py  open_meteo_csv_cronjob.py  open_meteo_influx_cronjob.py
cron-runner/cron/jobs/water_level/: pegel_online.py  pegel_online_cronjob.py
cron-runner/dev/: data-debuggin.ipynb
cron-status/: Dockerfile  app.py  requirements.txt
cron/jobs/: cronjob_base.py  open_meteo.py  open_meteo_influx.py  toDataFrame.py
cronjob/: config.py  cron.py  settings.py
cronjob/jobs/: open_meteo.py
cronjob/utils/: get_model_with_no_data_for_location.py  get_models_with_ids.py
jobs/: cronjob.py  open_meteo.py
utils/: get_model_with_no_data_for_location.py  get_models_with_ids.py  models_with_no_data.txt
