[project]
name = "cronjob"
version = "0.1.0"
description = "Cron job to fetch weather data"

dependencies = [
   'openmeteo-requests>=1.3.0',
   'requests-cache>=1.2.1',
   'retry-requests>=2.0.0',
   'numpy >= 2.1.2',
   'pandas >= 2.2.3',
   'pathlib>=1.0.1'
]

[tool.setuptools]
packages = ["cronjob"]